lib: Export a way to get the default adapter proxy internally

So that the Settings widget can use it.

https://bugzilla.gnome.org/show_bug.cgi?id=790801